--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>892</width>
-    <height>633</height>
+    <height>644</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -57,7 +57,7 @@
      </item>
      <item>
       <property name="text">
-       <string>System</string>
+       <string extracomment="a music system, a line of music">System</string>
       </property>
      </item>
      <item>
@@ -172,7 +172,7 @@
    <item row="0" column="1">
     <widget class="QStackedWidget" name="pageStack">
      <property name="currentIndex">
-      <number>14</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="Page1">
       <layout class="QVBoxLayout" name="verticalLayout_20">
