--- a/mscore/debugger/element.ui
+++ b/mscore/debugger/element.ui
@@ -74,7 +74,7 @@
         <item>
          <widget class="QPushButton" name="link1">
           <property name="text">
-           <string>Link1</string>
+           <string notr="true">Link1</string>
           </property>
          </widget>
         </item>
@@ -91,7 +91,7 @@
         <item>
          <widget class="QPushButton" name="link3">
           <property name="text">
-           <string>Link3</string>
+           <string notr="true">Link3</string>
           </property>
          </widget>
         </item>
