zoom in prefs in % too, just like on main menu
Former-commit-id: 93660814b11c195619cb7a09ae5cc9f6172d554a

--- a/mscore/prefsdialog.ui
+++ b/mscore/prefsdialog.ui
@@ -1599,17 +1599,23 @@
             <property name="toolTip">
              <string>default scale for new score views</string>
             </property>
+            <property name="suffix">
+             <string notr="true">%</string>
+            </property>
+            <property name="decimals">
+             <number>0</number>
+            </property>
             <property name="minimum">
-             <double>0.100000000000000</double>
+             <double>5.000000000000000</double>
             </property>
             <property name="maximum">
-             <double>10.000000000000000</double>
+             <double>1600.000000000000000</double>
             </property>
             <property name="singleStep">
-             <double>0.200000000000000</double>
+             <double>20.000000000000000</double>
             </property>
             <property name="value">
-             <double>1.000000000000000</double>
+             <double>100.000000000000000</double>
             </property>
            </widget>
           </item>
