--- a/mscore/inspector/inspector_image.ui
+++ b/mscore/inspector/inspector_image.ui
@@ -152,7 +152,7 @@
         </sizepolicy>
        </property>
        <property name="suffix">
-        <string>%</string>
+        <string notr="true">%</string>
        </property>
        <property name="decimals">
         <number>1</number>
@@ -180,7 +180,7 @@
         </sizepolicy>
        </property>
        <property name="suffix">
-        <string>%</string>
+        <string notr="true">%</string>
        </property>
        <property name="decimals">
         <number>1</number>
