several fixes for translations
Former-commit-id: 3f474d84d6058f6a79ad80e8108e9e0be3d61008

--- a/mscore/note_groups.ui
+++ b/mscore/note_groups.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>GroupBox</string>
+   <string>Note Groups</string>
   </property>
   <property name="title">
    <string>Note Groups</string>
