--- a/mscore/album.ui
+++ b/mscore/album.ui
@@ -74,7 +74,7 @@
      <item row="3" column="1">
       <widget class="QPushButton" name="down">
        <property name="toolTip">
-        <string>Move Current Score Down in List</string>
+        <string>Move current score down in list</string>
        </property>
        <property name="text">
         <string>Down</string>
@@ -84,7 +84,7 @@
      <item row="2" column="1">
       <widget class="QPushButton" name="up">
        <property name="toolTip">
-        <string>Move Current Score Up in List</string>
+        <string>Move current score up in list</string>
        </property>
        <property name="text">
         <string>Up</string>
