--- a/mscore/bend.ui
+++ b/mscore/bend.ui
@@ -123,7 +123,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>PreBend</string>
+      <string>Prebend</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
@@ -142,7 +142,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>PreBend/Release</string>
+      <string>Prebend/Release</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
