--- a/mscore/measureproperties.ui
+++ b/mscore/measureproperties.ui
@@ -473,7 +473,7 @@
             <string>goto previous measure</string>
            </property>
            <property name="text">
-            <string>&lt;-</string>
+            <string notr="true" extracomment="&amp;larr;">←</string>
            </property>
           </widget>
          </item>
@@ -483,7 +483,7 @@
             <string>goto next measure</string>
            </property>
            <property name="text">
-            <string>-&gt;</string>
+            <string notr="true" extracomment="&amp;rarr;">→</string>
            </property>
           </widget>
          </item>
