adding/removing colons in some dialogs
and making insert measure dialog similar to append measures dialog


Former-commit-id: b5fc9a268cba7e21508408011e0dfe7c609df698

--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -1520,7 +1520,7 @@ p, li { white-space: pre-wrap; }
             <item>
              <widget class="QRadioButton" name="showIntervalMeasureNumber">
               <property name="text">
-               <string>Interval</string>
+               <string>Interval:</string>
               </property>
               <property name="checked">
                <bool>true</bool>
