--- a/mscore/measuresdialog.ui
+++ b/mscore/measuresdialog.ui
@@ -1,7 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0" >
  <class>MeasuresDialogBase</class>
- <widget class="QDialog" name="MeasuresDialogBase" >
-  <property name="geometry" >
+ <widget class="QDialog" name="MeasuresDialogBase">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,22 +10,22 @@
     <height>112</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Mscore: Append Measures</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="margin" >
+  <layout class="QVBoxLayout">
+   <property name="margin">
     <number>9</number>
    </property>
-   <property name="spacing" >
+   <property name="spacing">
     <number>6</number>
    </property>
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint">
       <size>
        <width>20</width>
        <height>40</height>
@@ -33,33 +34,33 @@
     </spacer>
    </item>
    <item>
-    <widget class="QLabel" name="label_2" >
-     <property name="text" >
-      <string>Append empty measures:</string>
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Append empty measures</string>
      </property>
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
+    <layout class="QHBoxLayout">
+     <property name="margin">
       <number>0</number>
      </property>
-     <property name="spacing" >
+     <property name="spacing">
       <number>6</number>
      </property>
      <item>
-      <widget class="QLabel" name="label" >
-       <property name="text" >
-        <string>Number of measures to append</string>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Number of measures to append:</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QSpinBox" name="measures" >
-       <property name="maximum" >
+      <widget class="QSpinBox" name="measures">
+       <property name="maximum">
         <number>1000</number>
        </property>
-       <property name="minimum" >
+       <property name="minimum">
         <number>1</number>
        </property>
       </widget>
@@ -68,10 +69,10 @@
    </item>
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint">
       <size>
        <width>20</width>
        <height>40</height>
@@ -80,19 +81,19 @@
     </spacer>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
+    <layout class="QHBoxLayout">
+     <property name="margin">
       <number>0</number>
      </property>
-     <property name="spacing" >
+     <property name="spacing">
       <number>6</number>
      </property>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint">
         <size>
          <width>131</width>
          <height>31</height>
@@ -101,14 +102,14 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="okButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="okButton">
+       <property name="text">
         <string>OK</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="cancelButton" >
+      <widget class="QPushButton" name="cancelButton">
        <property name="text" >
         <string>Cancel</string>
        </property>
@@ -126,11 +127,11 @@
    <receiver>MeasuresDialogBase</receiver>
    <slot>accept()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>278</x>
      <y>253</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>96</x>
      <y>254</y>
     </hint>
@@ -142,11 +143,11 @@
    <receiver>MeasuresDialogBase</receiver>
    <slot>reject()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>369</x>
      <y>253</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>179</x>
      <y>282</y>
     </hint>
