--- a/mscore/debugger/textline.ui
+++ b/mscore/debugger/textline.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
-    <height>128</height>
+    <width>330</width>
+    <height>132</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,7 +24,21 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <layout class="QFormLayout" name="formLayout">
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="1" column="0">
+         <widget class="QPushButton" name="beginText">
+          <property name="text">
+           <string notr="true">BeginText</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QPushButton" name="continueText">
+          <property name="text">
+           <string notr="true">ContinueText</string>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
@@ -39,17 +53,10 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QPushButton" name="beginText">
+        <item row="1" column="2">
+         <widget class="QPushButton" name="endText">
           <property name="text">
-           <string notr="true">BeginText</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QPushButton" name="continueText">
-          <property name="text">
-           <string notr="true">ContinueText</string>
+           <string>endText</string>
           </property>
          </widget>
         </item>
