--- a/mscore/lineproperties.ui
+++ b/mscore/lineproperties.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1038</width>
-    <height>413</height>
+    <width>504</width>
+    <height>459</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <number>4</number>
    </property>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
      <property name="leftMargin">
       <number>0</number>
      </property>
@@ -34,8 +34,8 @@
         <string>Begin</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="0" column="0">
-         <widget class="QRadioButton" name="beginTextRb">
+        <item row="2" column="0">
+         <widget class="QCheckBox" name="beginHook">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
@@ -43,31 +43,18 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Text</string>
-          </property>
-          <property name="autoExclusive">
-           <bool>false</bool>
+           <string>Hook</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="1" colspan="3">
-         <widget class="QLineEdit" name="beginText"/>
-        </item>
-        <item row="0" column="5">
+        <item row="0" column="9">
          <widget class="QToolButton" name="beginTextTb">
           <property name="text">
            <string>...</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1" colspan="2">
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>Place:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="3" colspan="3">
+        <item row="1" column="2" colspan="7">
          <widget class="QComboBox" name="beginTextPlace">
           <item>
            <property name="text">
@@ -86,109 +73,38 @@
           </item>
          </widget>
         </item>
-        <item row="2" column="0">
-         <widget class="QRadioButton" name="beginSymbolRb">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
+        <item row="2" column="6">
+         <widget class="QRadioButton" name="beginHookType90">
           <property name="text">
-           <string>Symbol</string>
-          </property>
-          <property name="autoExclusive">
-           <bool>false</bool>
+           <string>90°</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="1" colspan="5">
-         <widget class="QComboBox" name="beginSymbol">
-          <item>
-           <property name="text">
-            <string>Ped (Pedal)</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-        <item row="3" column="1">
-         <widget class="QLabel" name="label_12">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
+        <item row="1" column="1">
+         <widget class="QLabel" name="label">
           <property name="text">
-           <string>X:</string>
+           <string>Place:</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="2">
-         <widget class="QDoubleSpinBox" name="beginSymbolX">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="suffix">
-           <string>sp</string>
-          </property>
-          <property name="minimum">
-           <double>-999.000000000000000</double>
-          </property>
-          <property name="maximum">
-           <double>999.990000000000009</double>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="3" colspan="2">
-         <widget class="QLabel" name="label_14">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>Y:</string>
+           <string>Text</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="5">
-         <widget class="QDoubleSpinBox" name="beginSymbolY">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="suffix">
-           <string>sp</string>
-          </property>
-          <property name="minimum">
-           <double>-999.000000000000000</double>
-          </property>
-          <property name="maximum">
-           <double>999.990000000000009</double>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <widget class="QCheckBox" name="beginHook">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
+        <item row="2" column="7">
+         <widget class="QRadioButton" name="beginHookType45">
           <property name="text">
-           <string>Hook</string>
+           <string>45°</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="1" colspan="3">
+        <item row="0" column="1" colspan="8">
+         <widget class="QLineEdit" name="beginText"/>
+        </item>
+        <item row="2" column="1" colspan="4">
          <widget class="QDoubleSpinBox" name="beginHookHeight">
           <property name="suffix">
            <string>sp</string>
@@ -204,37 +120,10 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="4" colspan="2">
+        <item row="2" column="5">
          <widget class="QLabel" name="label_11">
           <property name="text">
            <string>Up</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="1">
-         <spacer name="verticalSpacer_3">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="5" column="1" colspan="2">
-         <widget class="QRadioButton" name="beginHookType90">
-          <property name="text">
-           <string>90°</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="3" colspan="3">
-         <widget class="QRadioButton" name="beginHookType45">
-          <property name="text">
-           <string>45°</string>
           </property>
          </widget>
         </item>
@@ -253,40 +142,31 @@
         <string>Continue</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="0" column="0">
-         <widget class="QRadioButton" name="continueTextRb">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>Text</string>
-          </property>
-          <property name="autoExclusive">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1" colspan="3">
-         <widget class="QLineEdit" name="continueText"/>
-        </item>
-        <item row="0" column="4" rowspan="2" colspan="2">
+        <item row="0" column="5">
          <widget class="QToolButton" name="continueTextTb">
           <property name="text">
            <string>...</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1" rowspan="2" colspan="2">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>Text</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" colspan="4">
+         <widget class="QLineEdit" name="continueText"/>
+        </item>
+        <item row="1" column="1">
          <widget class="QLabel" name="label_4">
           <property name="text">
            <string>Place:</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="3" colspan="3">
+        <item row="1" column="2" colspan="4">
          <widget class="QComboBox" name="continueTextPlace">
           <item>
            <property name="text">
@@ -305,108 +185,6 @@
           </item>
          </widget>
         </item>
-        <item row="3" column="0">
-         <widget class="QRadioButton" name="continueSymbolRb">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>Symbol</string>
-          </property>
-          <property name="autoExclusive">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="1" colspan="5">
-         <widget class="QComboBox" name="continueSymbol">
-          <item>
-           <property name="text">
-            <string>Ped (Pedal)</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-        <item row="4" column="1">
-         <widget class="QLabel" name="label_17">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>X:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="2">
-         <widget class="QDoubleSpinBox" name="continueSymbolX">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="suffix">
-           <string>sp</string>
-          </property>
-          <property name="minimum">
-           <double>-999.000000000000000</double>
-          </property>
-          <property name="maximum">
-           <double>999.990000000000009</double>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="3">
-         <widget class="QLabel" name="label_18">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>Y:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="4" colspan="2">
-         <widget class="QDoubleSpinBox" name="continueSymbolY">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="suffix">
-           <string>sp</string>
-          </property>
-          <property name="minimum">
-           <double>-999.000000000000000</double>
-          </property>
-          <property name="maximum">
-           <double>999.990000000000009</double>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="1">
-         <spacer name="verticalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
        </layout>
       </widget>
      </item>
@@ -416,89 +194,10 @@
         <string>End</string>
        </property>
        <layout class="QGridLayout" name="gridLayout">
-        <item row="0" column="0">
-         <widget class="QCheckBox" name="endSymbolRb">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
+        <item row="0" column="8">
+         <widget class="QToolButton" name="endTextTb">
           <property name="text">
-           <string>Symbol</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1" colspan="5">
-         <widget class="QComboBox" name="endSymbol">
-          <item>
-           <property name="text">
-            <string>Ped (Pedal)</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QLabel" name="label_23">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>X:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <widget class="QDoubleSpinBox" name="endSymbolX">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="suffix">
-           <string>sp</string>
-          </property>
-          <property name="minimum">
-           <double>-9999.000000000000000</double>
-          </property>
-          <property name="maximum">
-           <double>9999.989999999999782</double>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="3" colspan="2">
-         <widget class="QLabel" name="label_24">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>Y:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="5">
-         <widget class="QDoubleSpinBox" name="endSymbolY">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="suffix">
-           <string>sp</string>
-          </property>
-          <property name="minimum">
-           <double>-9999.000000000000000</double>
-          </property>
-          <property name="maximum">
-           <double>9999.989999999999782</double>
+           <string>...</string>
           </property>
          </widget>
         </item>
@@ -537,7 +236,57 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="4" colspan="2">
+        <item row="2" column="6">
+         <widget class="QRadioButton" name="endHookType45">
+          <property name="text">
+           <string>45°</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="5">
+         <widget class="QRadioButton" name="endHookType90">
+          <property name="text">
+           <string>90°</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" colspan="7">
+         <widget class="QLineEdit" name="endText"/>
+        </item>
+        <item row="1" column="2" colspan="6">
+         <widget class="QComboBox" name="endTextPlace">
+          <item>
+           <property name="text">
+            <string>Above</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Below</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Left</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>Place</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>Text</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="4">
          <widget class="QLabel" name="label_25">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -547,33 +296,6 @@
           </property>
           <property name="text">
            <string>Up</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="1">
-         <spacer name="verticalSpacer">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="3" column="1" colspan="2">
-         <widget class="QRadioButton" name="endHookType90">
-          <property name="text">
-           <string>90°</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="3" colspan="3">
-         <widget class="QRadioButton" name="endHookType45">
-          <property name="text">
-           <string>45°</string>
           </property>
          </widget>
         </item>
