--- a/mscore/boxproperties.ui
+++ b/mscore/boxproperties.ui
@@ -69,7 +69,7 @@
           <item row="0" column="0">
            <widget class="QLabel" name="label_6">
             <property name="text">
-             <string>Top/Left</string>
+             <string>Top/Left:</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -82,7 +82,7 @@
           <item row="0" column="2">
            <widget class="QLabel" name="label_7">
             <property name="text">
-             <string>Bottom/Right</string>
+             <string>Bottom/Right:</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
