--- a/mscore/lineproperties.ui
+++ b/mscore/lineproperties.ui
@@ -43,7 +43,7 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Hook</string>
+           <string>Hook:</string>
           </property>
          </widget>
         </item>
@@ -90,7 +90,7 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>Text</string>
+           <string>Text:</string>
           </property>
          </widget>
         </item>
@@ -152,7 +152,7 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
-           <string>Text</string>
+           <string>Text:</string>
           </property>
          </widget>
         </item>
@@ -210,7 +210,7 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Hook</string>
+           <string>Hook:</string>
           </property>
          </widget>
         </item>
@@ -275,14 +275,14 @@
         <item row="1" column="1">
          <widget class="QLabel" name="label_6">
           <property name="text">
-           <string>Place</string>
+           <string>Place:</string>
           </property>
          </widget>
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_5">
           <property name="text">
-           <string>Text</string>
+           <string>Text:</string>
           </property>
          </widget>
         </item>
