--- a/mscore/splitstaff.ui
+++ b/mscore/splitstaff.ui
@@ -69,7 +69,7 @@
                </sizepolicy>
               </property>
               <property name="text">
-               <string>Split point</string>
+               <string>Split point:</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
