--- a/mscore/debugger/textline.ui
+++ b/mscore/debugger/textline.ui
@@ -56,7 +56,7 @@
         <item row="1" column="2">
          <widget class="QPushButton" name="endText">
           <property name="text">
-           <string>endText</string>
+           <string notr="true">endText</string>
           </property>
          </widget>
         </item>
