fix wrong case in ui files
Former-commit-id: eaea9df3b34442387485d32425df633c47c42a90

--- a/mscore/measureproperties.ui
+++ b/mscore/measureproperties.ui
@@ -397,7 +397,7 @@
              </sizepolicy>
             </property>
             <property name="text">
-             <string>Add to Measure number:</string>
+             <string>Add to measure number:</string>
             </property>
            </widget>
           </item>
