add hint for translators
Former-commit-id: 558b8b5dcd2a565257c38c41db00cfc2c3e091dd

--- a/mscore/prefsdialog.ui
+++ b/mscore/prefsdialog.ui
@@ -342,7 +342,7 @@
           <item>
            <widget class="QLabel" name="label">
             <property name="text">
-             <string>Port number:</string>
+             <string extracomment="The UDP port number on which the MuseScore OSC server will listen on">Port number:</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
