--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -286,7 +286,14 @@
                 </widget>
                </item>
                <item row="1" column="1">
-                <widget class="QSpinBox" name="minEmptyMeasures"/>
+                <widget class="QSpinBox" name="minEmptyMeasures">
+                 <property name="minimum">
+                  <number>1</number>
+                 </property>
+                 <property name="value">
+                  <number>2</number>
+                 </property>
+                </widget>
                </item>
               </layout>
              </item>
